--- a/index.html
+++ b/index.html
@@ -136,28 +136,49 @@
             </section>
 
             <!--==================== PUBLICATIONS ==================== -->
-            <!-- <section class="services section" id="publications">
-                <h2 class="section_title">Research Publications</h2>
-                <span class="section_subtitle">My academic contributions</span>
+            <section class="services section" id="publications">
+                <h2 class="section_title">Research publications</h2>
+                <span class="section_subtitle">thanks to my wonderful collaboraters!</span>
 
-                <div class="services_container container grid">
-                    <!-- Publication 1 -->
-                    <!-- <div class="services_content">
-                        <div style="padding: 1rem 1.5rem 1rem 2rem;">
-                            <h3 class="services_title">Computing as a Policy Analysis Tool</h3>
-                            <p class="project_description">
-                                A study exploring how computational tools can be used to analyze and evaluate policy interventions, focusing on algorithmic fairness and social impact assessment.
-                                <br><br>
-                                <em>arXiv preprint (2024)</em>
-                            </p>
-                        </div>
-                        <a href="https://arxiv.org/pdf/1912.04883" target="_blank" class="button button-flex button-small button-link services_button" style="padding-left: 2rem;">
-                            Read Paper
-                            <i class="uil uil-arrow-right button_icon"></i>
-                        </a>
+                <div class="container" style="max-width: 700px; margin: 0 auto;">
+                    <div style="margin-bottom: 2rem;">
+                        <p style="margin-bottom: 1.5rem;">
+                            <strong class="button-link">Enabling End Users to Program Robots Using Reinforcement Learning. </strong><br>
+                            Tewodros Ayalew*, <b>Jennifer Wang*</b>, Michael Littman, Blase Ur, Sarah Sebo. <br>
+                            <em>Forthcoming at the IEEE/ACM International Conference on Human-Robot Interaction (HRI 2025)</em><br>
+                            <!-- <a href="#" class="button-link">[ PDF ]</a> -->
+                        </p>
+
+                        <p style="margin-bottom: 1.5rem;">
+                            <strong><a class="button-link" href="https://www.brookings.edu/articles/how-the-national-artificial-intelligence-research-resource-can-pilot-inclusive-ai/">
+                                How the National Artificial Intelligence Research Resource can pilot
+                                inclusive AI.</a></strong><br>
+                            <b>Jennifer Wang</b>, Mark Muro<br>
+                            <em>Brookings Institution (2024).</em><br>
+                        </p>
+
+                        <p style="margin-bottom: 1.5rem;">
+                            <strong><a class="button-link" href="https://votekit.readthedocs.io/en/latest/">Votekit: A Python Package For Computational Social Choice Research. </a></strong><br>
+                                Christopher Donnay, Moon Duchin, Jack Gibson, Zach Glaser, Andrew Hong, Malavika Mukundan, <b>Jennifer Wang</b> (Authors listed in alphabetical order)<br>
+                            <em>Under review at Journal of Open Source Software 2024.</em><br>
+                        </p>
+
+                        <p style="margin-bottom: 1.5rem;"></p>
+                            <strong><a class="button-link" href="https://arxiv.org/abs/2409.01984">Observing Context Improves Disparity Estimation when Race is Unobserved. </a></strong><br>
+                                Kweku Kwegyir-Aggrey, Naveen Durvasula, <b>Jennifer Wang</b>, Suresh Venkatasubramanian<br>
+                            <em>Proceedings of AAAI Conference on AI, Ethics, and Society (AIES 2024).</em><br>
+                        </p>
+
+                        <p style="margin-bottom: 1.5rem;"></p>
+                            <strong><a class="button-link" href="https://arxiv.org/abs/2208.06448">RLang: A Declarative Language for Expressing Prior Knowledge for Reinforcement
+                                Learning. </a></strong><br>
+                                Rafael Rodriguez-Sanchez*, Benjamin Spiegel*, <b>Jennifer Wang</b>, Roma Patel, Stefanie Tellex, George Konidaris.<br>
+                            <em>Proceedings of International Conference in Machine Learning (ICML 2023).</em><br>
+                        </p>
                     </div>
                 </div>
-            </section> -->
+
+            </section>
 
             <!--==================== ABOUT ====================-->
            <!-- <section class="about section" id="about"> -->
