edited website text

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
                         </a> -->
                     </li>
                     <li class="nav_item">
-                        <!-- <a href="#about" class="nav_link">
-                            <i class="uil uil-user-circle nav_icon"></i> About
-                        </a> -->
+                        <a href="#publications" class="nav_link">
+                            <i class="uil uil-user-circle nav_icon"></i> Publications
+                        </a>
                     </li>
                     <li class="nav_item">
                         <a href="#projects" class="nav_link">
@@ -59,11 +59,11 @@
                             <i class="uil uil-file-alt nav_icon"></i> Skills
                         </a>
                     </li> -->
-                    <li class="nav_item">
+                    <!-- <li class="nav_item">
                         <a href="https://www.linkedin.com/in/jennifer-wang-b156b81b1/" class="nav_link">
                             <i class="uil uil-message nav_icon"></i>Contact
                         </a>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
             <div class="nav_btns">
@@ -138,7 +138,7 @@
             <!--==================== PUBLICATIONS ==================== -->
             <section class="services section" id="publications">
                 <h2 class="section_title">Research publications</h2>
-                <span class="section_subtitle">thanks to my wonderful collaboraters!</span>
+                <span class="section_subtitle">Shout out to my wonderful collaboraters!</span>
 
                 <div class="container" style="max-width: 700px; margin: 0 auto;">
                     <div style="margin-bottom: 2rem;">
