--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
                             <a href="https://github.com/jennjwang" target="_blank" class="home_social-icon">
                                 <i class="uil uil-github-alt"></i>
                             </a>
-                            <a href="https://www.yelp.com/user_details?userid=ad__FNspVncH11CKbaeYXA" target="_blank" class="home_social-icon">
+                            <!-- <a href="https://www.yelp.com/user_details?userid=ad__FNspVncH11CKbaeYXA" target="_blank" class="home_social-icon">
                                 <i class="fa-brands fa-yelp"></i>
-                            </a>
+                            </a> -->
                         </div>
                         <div class="home_img">
                             <svg class="home_blob" viewBox="0 0 200 187" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -116,7 +116,7 @@
                         <div class="home_data">
                             <h1 class="home_title">Hi, Jenn here!</h1>
                             <h3 class="home_subtitle"></h3>
-                            <p class="home_description">I'm a senior at Brown University studying Computer Science with an interest in human-robot interaction, algorithmic fairness, and AI governance
+                            <p class="home_description">I'm a senior at Brown University studying Computer Science with an interest in human-computer interaction, algorithmic fairness, and AI governance.
                                 <br><br>
                                 My work explores transforming high-level societal objectives (e.g., what it means for a system to be intuitive to use or equitable in its decisions) into operationalizable low-level specifications.
                             </p>
@@ -198,7 +198,7 @@
 
             <section class="services section" id="projects">
                 <h2 class="about_title section_title">Check out my projects!</h2>
-                <span class="about_subtitle section_subtitle">Here are some cool things I've worked on</span>
+                <span class="about_subtitle section_subtitle">Some fun things I've worked on</span>
 
                 <div class="services_container container grid">
 
@@ -379,11 +379,31 @@
             <!--==================== EXPERIENCE ====================-->
             <section class="experience section" id="experience">
                 <h2 class="section_title">Where is Jenn?</h2>
-                <span class="section_subtitle">Here are some cool places I've worked at</span>
+                <span class="section_subtitle">Some cool places I've worked at</span>
                 <div class="experience-container container">
                     <div class="experience_sections">
                         <div class="experience_content">
 
+
+                            <!-- <div class="experience_data">
+                                <div>
+                                    <h3 class="experience_title">
+                                        Project Associate
+                                    </h3>
+                                    <span class="experience_subtitle">
+                                        Mozilla Foundation
+                                    </span>
+                                    <div class="experience_calendar">
+                                        <i class="uil uil-calendar-alt"></i>
+                                        03/2024 - Present
+                                    </div>
+                                </div>
+                                <div>
+                                    <span class="experience_rounder"></span>
+                                    <span class="experience_line"></span>
+                                </div>
+                            </div> -->
+                            
                             <div class="experience_data">
                                 <div></div>
                                 <div>
@@ -400,8 +420,11 @@
                                     </span>
                                     <div class="experience_calendar">
                                         <i class="uil uil-calendar-alt"></i>
-                                        Upcoming: 01/2024
+                                        01/2024 - 05/2024
                                     </div>
+                                    <p class="experience_content"></p>
+                                        I authored commentary on the challenges the NAIRR pilot faces in democratizing AI research.
+                                    </p>
                                 </div>
                             </div>
 
@@ -418,7 +441,7 @@
                                         09/2023 - 12/2023
                                     </div>
                                     <p class="experience_content">
-                                        I provided Deputy U.S. Chief Technology Officer and policy leads of OSTP’s Tech and Policy divisions with operational support to advance major policy initiatives, including the Executive Order on AI.
+                                        I supported Deputy U.S. Chief Technology Officer in advancing the Executive Order on AI.
                                     </p>
                                 </div>
                                 <div>
@@ -446,7 +469,7 @@
                                         09/2023-12/2023
                                     </div>
                                     <p class="experience_content">
-                                        I analyzed the contributions of 10+ federal data sources to race and ethnicity records and imputed over 1.5 million values by integrating additional surveys to a person-level demographic database.
+                                        I analyzed the contributions of 10+ federal data sources to race and ethnicity records.
                                 </div>
                             </div>
 
@@ -464,7 +487,7 @@
                                         09/2022-12/2022
                                     </div>
                                     <p class="experience_content">
-                                        I supported a slate of economic recovery programs under the RI Rebounds initiative, a $32 million effort to assist small businesses during Covid-19, through data cleaning, aggregation and analysis, metrics tracking, and project workflow management.
+                                        I analyzed data for RI Rebounds, a $32 M effort to assist small businesses during Covid-19.
                                     </p>
                                 </div>
                                 <div>
@@ -492,7 +515,7 @@
                                         06/2022-08/2022
                                     </div>
                                     <p class="experience_content">
-                                        I worked on the Billing team at Azure Storage to create a C# job that validates metrics across the billing pipeline. My project closed the validation coverage gap for almost 4 million transactions per tenant. 
+                                        I worked on the Billing team at Azure Storage to validate metrics across the billing pipeline.
                                 </div>
                             </div>
 
@@ -510,7 +533,7 @@
                                         01/2022-05/2022
                                     </div>
                                     <p class="experience_content">
-                                        I worked under the Collaborative Robotics Laboratory at NIST to add machine learning support to a robot teaching interface. I implemented Q-learning and R-max algorithms for the robot to learn to move a block of a certain color.
+                                        I worked under the Collaborative Robotics Lab to add ML support to a robot teaching interface.
                                     </p>
                                 </div>
                                 <div>
@@ -659,9 +682,9 @@
                     </div>
 
                     <ul class="footer_links">
-                        <!-- <li>
-                            <a href="#skills" class="footer_link">Skills</a>
-                        </li> -->
+                        <li>
+                            <a href="#publications" class="footer_link">Publications</a>
+                        </li>
                         <li>
                             <a href="#experience" class="footer_link">Experience</a>
                         </li>
