--- a/index.html
+++ b/index.html
@@ -116,9 +116,11 @@
                         <div class="home_data">
                             <h1 class="home_title">Hi, Jenn here!</h1>
                             <h3 class="home_subtitle"></h3>
-                            <p class="home_description">I'm a senior at Brown University studying Computer Science with an interest in human-computer interaction, algorithmic fairness, and AI governance.
-                                <br><br>
-                                My work explores transforming high-level societal objectives (e.g., what it means for a system to be intuitive to use or equitable in its decisions) into operationalizable low-level specifications.
+                            <p class="home_description">
+                                I’m a first-year Ph.D. student in Computer Science at Stanford University. My work focuses on human-AI collaboration and the societal impact of AI.
+                                I am fortunate to be working with Professors Diyi Yang, Sanmi Koyejo, and Dan Ho. 
+                                <!-- <br><br> -->
+                                <!-- My work explores transforming high-level societal objectives (e.g., what it means for a system to be intuitive to use or equitable in its decisions) into operationalizable low-level specifications. -->
                             </p>
                             <!-- <a href="https://www.linkedin.com/in/jennifer-wang-b156b81b1/" class="button button--flex">
                                 Let's connect &nbsp;:)
