--- a/index.html
+++ b/index.html
@@ -140,14 +140,14 @@
             <!--==================== PUBLICATIONS ==================== -->
             <section class="services section" id="publications">
                 <h2 class="section_title">Research publications</h2>
-                <span class="section_subtitle">Shout out to my wonderful collaboraters!</span>
+                <!-- <span class="section_subtitle">Shout out to my wonderful collaboraters!</span> -->
 
                 <div class="container" style="max-width: 700px; margin: 0 auto;">
                     <div style="margin-bottom: 2rem;">
                         <p style="margin-bottom: 1.5rem;">
                             <strong class="button-link">Enabling End Users to Program Robots Using Reinforcement Learning. </strong><br>
                             Tewodros Ayalew*, <b>Jennifer Wang*</b>, Michael Littman, Blase Ur, Sarah Sebo. <br>
-                            <em>Forthcoming at the IEEE/ACM International Conference on Human-Robot Interaction (HRI 2025)</em><br>
+                            <em>IEEE/ACM International Conference on Human-Robot Interaction (HRI 2025)</em><br>
                             <!-- <a href="#" class="button-link">[ PDF ]</a> -->
                         </p>
 
