--- a/index.html
+++ b/index.html
@@ -117,8 +117,7 @@
                             <h1 class="home_title">Hi, Jenn here!</h1>
                             <h3 class="home_subtitle"></h3>
                             <p class="home_description">
-                                I’m a first-year Ph.D. student in Computer Science at Stanford University. My work focuses on human-AI collaboration and the societal impact of AI.
-                                I am fortunate to be working with Professors Diyi Yang, Sanmi Koyejo, and Dan Ho. 
+                                I’m a first-year Ph.D. student in Computer Science at Stanford University. I'm interested in human-AI collaboration and the societal impact of AI, and am fortunate to be working with Professors Diyi Yang, Sanmi Koyejo, and Dan Ho. 
                                 <!-- <br><br> -->
                                 <!-- My work explores transforming high-level societal objectives (e.g., what it means for a system to be intuitive to use or equitable in its decisions) into operationalizable low-level specifications. -->
                             </p>
